Fixed the footer, cleaned up the picard section and got it to where the text no longer overlaps, but no longer has the width matching like the other elements do.

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,9 @@ body { width: 100%;}
 * * Pseudo Classes
 * * Attribute Selectors
 ******************************************************/
-/*Applying this font  */
+/*****************************************************
+Font being applied
+******************************************************/
 @font-face {
 	font-family: "Liberation Mono";
 	src: url(./LiberationMono-Regular.ttf);
@@ -72,10 +74,12 @@ body { width: 100%;}
 	font-family: "Liberation Mono", Courier, monospace;
 }
 
-/*  The header*/
+/*****************************************************
+The Heading
+******************************************************/
 header {
 	display: flex;
-	/* 	display: block; */
+	display: block;
 	color: #00ff00;
 	background-color: #333333;
 	/* 	display: flex; */
@@ -90,7 +94,6 @@ header {
 	/* 	margin-right: 50%; */
 }
 
-/* This may affect the janeway box, mostly def the header text. */
 header > .container {
 	/* 	display: inline-block; */
 	display: flex;
@@ -103,8 +106,9 @@ header > .container {
 	justify-content: space-between;
 	/* 	padding-right: 50%; */
 }
-/*  *********************************************************/
-/*  Welcome to my homepage image*/
+/*****************************************************
+Welcome to my homepage image
+******************************************************/
 .container > img {
 	/* 	 width: 100% */
 	/* 		height: auto; */
@@ -115,8 +119,9 @@ header > .container {
 	margin-top: 7.5%;
 	margin-bottom: 2%;
 }
-/*  *********************************************************/
-/*  Janeway box*/
+/*****************************************************
+Instructions and Janeway Box
+******************************************************/
 .instructions-wrapper {
 	display: flex;
 	flex-direction: row;
@@ -136,80 +141,59 @@ header > .container {
 	padding-left: 18em;
 	height: 13em;
 }
-/*  *****************************************************************/
-/* Picard box */
+/*****************************************************
+Picard about me
+******************************************************/
 .about-me {
+	width: 100%;
+	/* 	justify-content: left */
 	display: flex;
 	background-color: #0000ff;
-	padding-top: 5em;
-	/* 	padding-left: 0%; */
-	/* 	padding-right: 100%; */
-	height: 26em;
-	width: 100%;
-	/* 	margin: auto; */
-	float: right;
+	/* 	padding-top: 5rem; */
+	/* 	margin-top: 2rem; */
+	padding: 3rem;
+	float: left;
 }
 
 .about-me > .container {
-	/* 	display: flex; */
-	margin-left: 25%;
-	margin-right: 19%;
-	/* 	flex-direction: column; */
-	/* 	flex-wrap: wrap; */
-	/* 	text-align: left; */
-	/* 	float: left; */
-	/*   align-content: space-around; */
-	/* 	justify-content: space-between; */
-	/* 	align-items: stretch; */
-	/* 	margin-left: 100px; */
-	width: 61%;
+	margin-right: 40%;
+	width: 35%;
 }
 
 /* Picard picture */
-.about-me > .container > img {
+img[alt*="captain picard"] {
+	/* 	display: inline; */
 	margin: 0;
-	width: 400px;
-	height: 333px;
+	width: 35%;
+	height: auto;
 	float: left;
 	margin-right: 2em;
 	border: 3px solid white;
 }
 
 .about-me > .container > h2 {
-	/* 	display: flex; */
-	/*! justify-content: space-around; */
-	/*! flex-direction: row; */
-	/*! margin-left: 1%; */
-	/*! padding-right: 1000px; */
-	/* 	width: 1000000000px; */
-	/*! text-decoration-color: red; */
+	text-align: left;
+	display: flex;
+	color: white;
+	margin-top: 0%;
 }
 
 .about-me > .container > p {
-	/*! display: block; */
-	/*! justify-content: space-around; */
-	/*! flex-direction: column; */
-	margin-left: 1%;
-	height: 5em;
-	/* 	width: 100px; */
-	/* 	justify-content: space-around; */
-	align-items: stretch;
-	padding: 1px;
-	padding-bottom: 25px;
+	/* 	margin-bottom: 8%; */
+	/* 	height: 5em; */
+	/* 	padding: 1px; */
+	/* 	padding-bottom: 25px; */
+
 }
 
 .about-me > .container > p > span {
-	/* 	display: flex; */
-	/* 	justify-content: space-around; */
-	/* 	flex-direction: row; */
-	/* 	margin-left: 1%; */
 	color: #ffe76f;
 	font-style: italic;
-	/* 	justify-content: flex-start; */
-	/* 	align-self: flex-start; */
-	/* 	display:; */
 }
-/*  PROFESSIONAL SKILLS SECTION *************************************************************/
+
+/*****************************************************
+Professional Skills Section
+******************************************************/
 section:nth-child(4n) {
 	/* 	display: inline-block; */
 	/* 	display: flex; */
@@ -220,7 +204,7 @@ section:nth-child(4n) {
 	width: 85%;
 	margin-left: 7%;
 	/* 	padding-right: 50px; */
-	margin-top: 24%;
+	margin-top: 27em;
 }
 section:nth-child(4n) table {
 	/* 	display: block; */
@@ -260,12 +244,14 @@ section:nth-child(4n) table td {
 	background-color: #333333;
 }
 
-/* CONTACT ME SECTION */
+/*****************************************************
+Contact Me Section
+******************************************************/
 
 section:nth-child(5n){
 	display: flex;
 	flex-direction: column;
-	margin-top: 17%;
+	margin-top: 11em;
 	background-color: #333333;
 	color: #00ff00;
 	justify-content: flex-start;
@@ -275,26 +261,33 @@ section:nth-child(5n){
 }
 
 .form-wrapper {
-	/* display: block; */
+	display: block;
 	background-color: #006400;
 	padding: 3%;
 	/* 	width: 2000px; */
 	margin: 4% 0 4% 0;
 	width: 100%;
+	align-items: center;
 }
 label {
 	display: block;
+	margin-top: 1%;
 }
 
 button {
 	background-color: #00ff00;
 }
 
-/* FOOTER STYLE */
+/*****************************************************
+Footer Section
+******************************************************/
 footer {
+	display: flex;
 	text-align: center;
 	color: white;
 	background-color: black;
+	justify-self: center;
+	padding-bottom: 1em;
 	/*! height: 0; */
 }
 /* * { */
